# VirgilBot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-app.yml
src/: config.py  main.py
src/cogs/: shut.py
